--- a/public/style.css
+++ b/public/style.css
@@ -1,8 +1,23 @@
 body {
   margin: 0;
-}
-
-h1 {
   font-family: 'VT323', monospace;
   font-size: 24px;
 }
+
+.pixelBtn, .title-screen {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.title-screen {
+  background-color: blanchedalmond;
+  background-size: cover;
+  height: 100vh;
+}
+
+.title-screen-ori {
+  position: relative;
+}
+
+
